bridge/base/0-scad-namespace.yaml
#! 0-scad-namespace.yaml
# Generated code, do not edit
apiVersion: v1
kind: Namespace
metadata:
    name: scad
    labels:
        com.docker.compose.project: scad
