bridge/base/db-deployment.yaml
#! db-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: db
    namespace: scad
    labels:
        com.docker.compose.project: scad
        com.docker.compose.service: db
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: scad
            com.docker.compose.service: db
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: scad
                com.docker.compose.service: db
                com.docker.compose.network.scad-network: "true"
        spec:
            containers:
                - name: db
                  image: mysql:8.0
                  imagePullPolicy: IfNotPresent
                  livenessProbe:
                    exec:
                        command: [mysqladmin ping -h localhost -u root -proot]
                    periodSeconds: 10
                    initialDelaySeconds: 30
                    timeoutSeconds: 5
                    failureThreshold: 5
                  ports:
                    - name: db-33060
                      containerPort: 33060
                    - name: db-3306
                      containerPort: 3306
                  volumeMounts:
                    - name: var-lib-mysql
                      mountPath: /var/lib/mysql
            volumes:
                - name: var-lib-mysql
                  persistentVolumeClaim:
                    claimName: db-db-data
