bridge/base/app-expose.yaml
#! app-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: app
    namespace: scad
    labels:
        com.docker.compose.project: scad
        com.docker.compose.service: app
spec:
    selector:
        com.docker.compose.project: scad
        com.docker.compose.service: app
    ports:
        - name: app-8080
          port: 8080
          targetPort: app-8080
