bridge/base/db-expose.yaml
#! db-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: db
    namespace: scad
    labels:
        com.docker.compose.project: scad
        com.docker.compose.service: db
spec:
    selector:
        com.docker.compose.project: scad
        com.docker.compose.service: db
    ports:
        - name: db-33060
          port: 33060
          targetPort: db-33060
        - name: db-3306
          port: 3306
          targetPort: db-3306
